// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/IntlProvider should render children when passed translation strings 1`] = `
<span>
  Hello, World!
</span>
`;

exports[`components/IntlProvider should render children when passed translation strings for a non-default locale 1`] = `
<span>
  Bonjour tout le monde!
</span>
`;
